--- a/frontend/my-project/index.html
+++ b/frontend/my-project/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/ico" href="/faviconChange.ico" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Grocery Wala</title>
 </head>
